feat: support multiple file uploads ,enhance file message  display and also optimized it for the bigger size pdf's . reads a line then writes that line instead of first reading all the text in the String builder and then writing the docx file